--- a/WorkerMgrSys/WorkerMgrSys.vcxproj
+++ b/WorkerMgrSys/WorkerMgrSys.vcxproj
@@ -125,6 +125,13 @@
   <ItemGroup>
     <ClCompile Include="main.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="woker_mgr_sys\bean\base_worker.h" />
+    <ClInclude Include="woker_mgr_sys\bean\menu\worker_sys_menu.h" />
+    <ClInclude Include="woker_mgr_sys\bean\menu\worker_sys_menu_item.h" />
+    <ClInclude Include="woker_mgr_sys\bean\menu\worker_sys_menu_item_collection.h" />
+    <ClInclude Include="woker_mgr_sys\sys_operate\method_operate.h" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
