--- a/WorkerMgrSys/WorkerMgrSys.vcxproj.filters
+++ b/WorkerMgrSys/WorkerMgrSys.vcxproj.filters
@@ -19,4 +19,21 @@
       <Filter>源文件</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="woker_mgr_sys\sys_operate\method_operate.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="woker_mgr_sys\bean\base_worker.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="woker_mgr_sys\bean\menu\worker_sys_menu.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="woker_mgr_sys\bean\menu\worker_sys_menu_item.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="woker_mgr_sys\bean\menu\worker_sys_menu_item_collection.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+  </ItemGroup>
 </Project>
