--- a/WorkerMgrSys/WorkerMgrSys.vcxproj.filters
+++ b/WorkerMgrSys/WorkerMgrSys.vcxproj.filters
@@ -15,17 +15,6 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="main.cpp">
-      <Filter>源文件</Filter>
-    </ClCompile>
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="woker_mgr_sys\sys_operate\method_operate.h">
-      <Filter>头文件</Filter>
-    </ClInclude>
-    <ClInclude Include="woker_mgr_sys\bean\base_worker.h">
-      <Filter>头文件</Filter>
-    </ClInclude>
     <ClInclude Include="woker_mgr_sys\bean\menu\worker_sys_menu.h">
       <Filter>头文件</Filter>
     </ClInclude>
@@ -35,5 +24,34 @@
     <ClInclude Include="woker_mgr_sys\bean\menu\worker_sys_menu_item_collection.h">
       <Filter>头文件</Filter>
     </ClInclude>
+    <ClInclude Include="woker_mgr_sys\bean\worker\worker_base.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="woker_mgr_sys\bean\worker\worker.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="woker_mgr_sys\worker_mgr.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="woker_mgr_sys\worker_sys_data.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+  </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="main.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="woker_mgr_sys\bean\menu\worker_sys_menu.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="woker_mgr_sys\bean\menu\worker_sys_menu_item.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="woker_mgr_sys\bean\menu\worker_sys_menu_item_collection.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
+    <ClCompile Include="woker_mgr_sys\worker_sys_data.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
